--- a/django_web-master/blog/templates/page/header.html
+++ b/django_web-master/blog/templates/page/header.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>코로나 분석</title>
+    <title>DODAEGUK thesis</title>
     {% load staticfiles %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" type="text/css">
 	<link rel="shortcut icon" type="image/png" sizes="16x16" href="{% static 'img/ico/F_icon.png' %}">
@@ -30,11 +30,7 @@
 			  <div class="col-sm-10">
 				  <br>
 				  <center>
-				    <h1>
-				    	<p style="font-family: 'Raleway';font-size: 30px;">
-				            COVID-19 TEENAGE PATIENT ANALYSIS IN SOUTH KOREA
-				        </p>
-			        </h1> <!--Programming, Teaching, Entrepreneurship-->
+				    <h1><p style="font-family: 'Raleway';font-size: 30px;">ASSESSMENT OF SQUATTING<br> ON BRAIN SIGNAL AND BODY COMPOSITION</p></h1> <!--Programming, Teaching, Entrepreneurship-->
 				  </center>
 			  </div>
 		</div>
@@ -49,13 +45,13 @@
 				<!--<div class="well bs-sidebar affix" id="sidebar" style="background-color:#fff">-->
 				<div class="well bs-sidebar" id="sidebar" style="background-color:#fff">
 				  <ul class="nav nav-pills nav-stacked">
-					<li class="sidebar_color"><a href='/'>Intro.</a></li>
+					<li class="sidebar_color"><a href='/'>Home</a></li>
 					  <hr>
-					<li class="sidebar_color"><a href='/analysis/'>Patient analysis</a></li>
+					<li class="sidebar_color"><a href='/method/'>Method</a></li>
 					  <hr>
-				    <li class="sidebar_color"><a href='/map/'>Corona map</a></li>
+				    <li class="sidebar_color"><a href='/result/'>Result</a></li>
 					  <hr>
-				    <li class="sidebar_color"><a href='/summary/'>Summary</a></li>
+				    <li class="sidebar_color"><a href='/conclusion/'>Conclusion</a></li>
 				  </ul>
 				</div> <!--well bs-sidebar affix-->
 		  </div> <!--col-sm-2-->
@@ -75,10 +71,7 @@
 	<footer class="footer">
 		<div class="container-fluid" style='margin-left:15px'>
 			<div class="col-sm-10">
-			<p>
-				<a href="mailto:eornrsayclub@naver.com" target="blank" style="color: #66ab60;">Contact</a> | 
-				<a href="https://www.linkedin.com/in/daekook-do-7b3b4794?trk=nav_responsive_tab_profile_pic" target="blank">LinkedIn</a>
-			</p>
+			<p><a href="mailto:eornrsayclub@naver.com" target="blank" style="color: #66ab60;">Contact</a> | <a href="https://www.linkedin.com/in/daekook-do-7b3b4794?trk=nav_responsive_tab_profile_pic" target="blank">LinkedIn</a> | <a href="https://www.facebook.com/eornrsayclub/" target="blank" style="color: #FA8517;">Facebook</a></p>
 			</div>
 			<div class="col-sm-2">
 			<p class="pull-right"><a href="#">제일 위로</a></p>
