--- a/django_web-master/blog/templates/page/home.html
+++ b/django_web-master/blog/templates/page/home.html
@@ -6,83 +6,124 @@
   <div class="blog-content">
     <!--Basic Text Block-->
     <div class="row">
-      <h2>안녕하세요!</h2>
+      <h2>Hello! Guest</h2>
       <div class="col-sm-10">
         <div class="blog-basic-text">
-          <p>최근 우리는 우리의 일반적인 삶을 위협받고있습니다. 그 이유는 모두가 겪고 있는 코로나 바이러스 때문입니다. 코로나 바이러스는 2019년 말에 중국 우한에서 시작된 바이러스로 매우 전염력이 강합니다. 이러한 특성 때문에 환자를 중심으로 어떻게 만나서 감염되었는지와 같은 데이터들이 많이 공개되고 있습니다. 이러한 데이터를 사용하여 한국에서 발생된 코로나 바이러스에 대한 분석을 해보고자 웹 사이트를 제작하였습니다.</p>
+          <p>This page is my thesis summary. My name is DODAEGUK. I came to Malaysia in the capacity of	exchange student from Inje University.
+              When I studied in University of Malaya, I had a chance about this thesis. I wrote my thesis for degree of bachelor in Biomedical Engineering in UM.
+              Thanks to every people that help to me and this thesis.</p>
         </div>
       </div>
     </div>
-    <br>
 
     <!--Basic Text Block-->
     <div class="row">
-      <h2>소개</h2>
-      <div class="col-sm-6">
+      <h2>Abstract</h2>
+      <div class="col-sm-10">
         <div class="blog-basic-text">
-          <p>저는 한국에서 의료기기 연구 개발을 하고 있는 도대국입니다. 여러 프로그래밍 언어와 데이터 분석 등을 좋아합니다. 특히 의료라는 분야와 관련된 데이터와 기술들을 특히 좋아합니다. 일하는 사이사이 의료와 관련한 데이터 처리 및 분석 등도 즐기고 있습니다. 어떤 것을 코어 기술 및 지식으로써 의료 부문 연구자로 자리 매김할지가 최근에 가장 고민입니다.</p>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="blog-code">
-          {% load staticfiles %}
-          <img src="{% static 'img/home/00_me.png' %}" class="img-responsive"></img>
+          <p>Brain has many functions such as control motor function, interpret information and control body movement.
+            It is essential to improve the brain functionality. One way to improve the brain’s functionality is by performing superbrain yoga.
+            Superbrain yoga is an exercise that involves squatting. This squatting activity requires special position to energize and recharge the brain’s functionality.
+            Thus, the objectives of this research study are to analyse the change of brain signal and body composition before and after performing squatting activity and determine optimal number of squatting cycles as well.
+            The methodology of this study composed of electroencephalogram (EEG) experiment and EEG signal analysis.
+            EEG experiment is conducted by using 32 channel EEG system. The data collected is analysed using MATLAB and Python software.
+            Alpha band (8Hz~13Hz) in EEG signal is extracted as this band is the main concern in this study. This is because alpha band is corresponds to mental relaxation state.
+            Power Spectral Density (PSD) values obtained from the analysis are compared between after squatting and before squatting activity.
+            Body composition is analysed using bioimpedance analysis (BIA) as well by comparing phase angle between after squatting and before squatting activity.
+            The differences between PSD values of EEG signal before and after squatting are calculated. Most of the results show increasing tendency pattern.
+            The results showed that PSD values for 14 cycles squatting is the highest value as compared to other cycles.
+            On the other hand, phase angle obtained from BIA for 14 cycles squatting shows the highest values as compared to other cycles.
+            In conclusion, 14 cycles squatting is the best cycle to improve brain’s functionality than other cycles.</p>
         </div>
       </div>
     </div>
-    <br>
 
     <!--In-text list-->
     <div class="row">
-      <h2>참조한 자료들</h2>
+      <h2>Thesis Keyword</h2>
       <div class="col-sm-10">
         <ul>
-          <div class="col-md-8 col-sm-4 col-xs-12">
+          <div class="col-md-3 col-sm-4 col-xs-12">
             <li>
-              <a href="https://www.kaggle.com/kimjihoo/coronavirusdataset" target="blank"> 한국 코로나 환자에 대한 캐글 데이터 셋 </a>
+              <p>Electroencephalogram</p>
             </li>
             <li>
-              <a href="https://dacon.io/competitions/official/235590/codeshare/949" target="blank"> 코로나 시각화 경진 대회 - 코로나19와의 전쟁에서 생명 구하기 자료 </a>
+              <p>Power Spectral Density</p>
             </li>
             <li>
-              <a href="https://dacon.io/competitions/official/235590/codeshare/1001" target="blank"> 코로나 시각화 경진 대회 - 뭉치면 죽고 퍼지면 산다! </a>
+              <p>Super brain yoga</p>
+            </li>
+            <li>
+              <p>Body composition</p>
             </li>
           </div>
         </ul>
       </div>
     </div>
-    <br>
 
     <!--Structured list-->
     <div class="row">
-      <h2>분석 자료의 목차</h2>
+      <h2>Thesis Structure</h2>
       <div class="col-sm-10">
         <div class="blog-structured-list">
           <ol>
-            <li>Introduction</li>
-            <p>개발자에 대한 소개 및 코로나에 대한 소개 등 전반적인 내용</p>
-            <li>Patient analysis</li>
-            <p>한국에서의 10대 코로나 환자에 대한 여러 분석을 시도 (개학 시점을 중심으로 분석)</p>
-            <li>Corona map</li>
-            <p>한국에서 10대 코로나 환자가 다녀간 곳을 지도에 표기해봄</p>
+            <li>Introduction (Home)</li>
+            <p>This part has overview about thesis. It also has abstract and experiment video.</p>
+            <li>Method</li>
+            <p>This chapter describes the protocol of EEG experiment and methodology of signal analysis.
+                The flow chart of the protocol is included in this chapter for better understanding.</p>
+            <li>Result</li>
+            <p>This chapter describes the results of Power Spectral Density (PSD) values obtained from signal analysis and body composition results.
+                The results of PSD consist of graph of average PSD values for alpha band in EEG signal obtained from each subjects for each cycle.
+                Bar graph is also presented in this part to compare average PSD values in alpha band before and after squatting.
+                The results of body composition composed of body capacitance, resistance, reactance and phase angle.
+                The phase angles are compared before and after squatting and the difference between them is calculated.</p>
+            <li>Conclusion</li>
+            <p>This chapter describes the conclusion of this thesis project. Several limitations are faced during completing the project and require future works for improvements.
+                Both limitations and recommendation for future work are explained in this chapter.</p>
           </ol>
         </div>
       </div>
     </div>
-    <br>
 
     <!--Video half-->
     <div class="row">
-      <h2>코로나 바이러스 분석에 대한 계기</h2>
+      <h2>Superbrain yoga Video</h2>
       <div class="col-sm-5">
         <div class="blog-basic-text">
-          <p>코로나 맵을 바탕으로 사회에 기여하고 있는 대학생을 '유퀴즈 온 더 블럭' 예능에서 인터한 영상이다. 이러한 대학생을 보고 알고있는 지식을 사용하여 실제로 사회에 기여하는 것이 올바른 지식의 사용이라고 생각했다. 특히, 여러 경험을 통해 주체적인 자신을 만드는 가장 중요한 시기인 10대가 코로나의 영향을 받이 받지만 상대적으로 분석이 부족한 것 같다는 느낌을 았습니다. 이러한 동기를 바탕으로 분석을 시도해보았습니다.</p>
+          <p>Superbrain yoga is simple squat exercise. This special squat is known as improving brain activity with exercise effect.
+            This squat’s mechanism is based on acupuncture.
+            According to research that is studied by Dr. Joie P. Jones of the Dept. of Radiological Sciences at the University of California,
+            acupressure energy point for the brain congregate around the area of the ear that is affected by pressure from the exercise like to superbrain yoga.
+            In this squat, person use finger pads. As a result, this action stimulate neuropathways in the brain.
+            It means that the brain is stimulated by pressing acupuncture points on the earlobes.</p>
         </div>
       </div>
       <div class="col-sm-5">
-        <br>
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" width="400" height="245" src="https://www.youtube.com/embed/mI9OHyjRDgk" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"></iframe>
+        <div class="blog-video">
+          <iframe class="youtube" src="https://www.youtube.com/embed/KSwhpF9iJSs" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+
+    <!--Video half-->
+    <div class="row">
+      <h2>Experiment Video</h2>
+      <div class="col-sm-5">
+        <div class="blog-basic-text">
+          <p>First, subject need to fast for 4 hours. Some food and drink affect to EEG and body composition.
+            I measure subject's height and weight. This data use in body composition measurement.
+            After that, I measure the body composition.
+            Subject wear soft cap that has electrode for EEG.
+            I measure subject's EEG data during 3 minutes. In this time, subject close eyes with resting.
+            Subject's EEG data is measured with squatting. When I measure EEG in other day, I change this squatting cycles.
+            After squatting, I measure subject's EEG data during 3 minutes one more time.
+            Finally, I measure the body composition.</p>
+        </div>
+      </div>
+      <div class="col-sm-5">
+        <div class="blog-video">
+          <iframe class="youtube" src="https://www.youtube.com/embed/6soHq8jAR_E" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -90,6 +131,7 @@
 
   </div>
 </div>
+
 
 
 {% endblock %}
