--- a/django_web-master/blog/templates/page/header.html
+++ b/django_web-master/blog/templates/page/header.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>DODAEGUK thesis</title>
+    <title>코뿔소횡경막</title>
     {% load staticfiles %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" type="text/css">
 	<link rel="shortcut icon" type="image/png" sizes="16x16" href="{% static 'img/ico/F_icon.png' %}">
@@ -30,7 +30,9 @@
 			  <div class="col-sm-10">
 				  <br>
 				  <center>
-				    <h1><p style="font-family: 'Raleway';font-size: 30px;">ASSESSMENT OF SQUATTING<br> ON BRAIN SIGNAL AND BODY COMPOSITION</p></h1> <!--Programming, Teaching, Entrepreneurship-->
+				    <h1><p style="font-family: 'Raleway';font-size: 30px;">코뿔소횡경막
+				    	<br> COVID19에 관한 데이터 가공과 시각화</p>
+				    </h1> <!--Programming, Teaching, Entrepreneurship-->
 				  </center>
 			  </div>
 		</div>
@@ -47,11 +49,9 @@
 				  <ul class="nav nav-pills nav-stacked">
 					<li class="sidebar_color"><a href='/'>Home</a></li>
 					  <hr>
-					<li class="sidebar_color"><a href='/method/'>Method</a></li>
+					<li class="sidebar_color"><a href='/analysis/'>Patient analysis</a></li>
 					  <hr>
-				    <li class="sidebar_color"><a href='/result/'>Result</a></li>
-					  <hr>
-				    <li class="sidebar_color"><a href='/conclusion/'>Conclusion</a></li>
+				    <li class="sidebar_color"><a href='/map/'>Corona map</a></li>
 				  </ul>
 				</div> <!--well bs-sidebar affix-->
 		  </div> <!--col-sm-2-->
@@ -71,10 +71,14 @@
 	<footer class="footer">
 		<div class="container-fluid" style='margin-left:15px'>
 			<div class="col-sm-10">
-			<p><a href="mailto:eornrsayclub@naver.com" target="blank" style="color: #66ab60;">Contact</a> | <a href="https://www.linkedin.com/in/daekook-do-7b3b4794?trk=nav_responsive_tab_profile_pic" target="blank">LinkedIn</a> | <a href="https://www.facebook.com/eornrsayclub/" target="blank" style="color: #FA8517;">Facebook</a></p>
+			<p>
+				<a href="mailto:3354945@gmail.com" target="blank" style="color: #FA8517;">Contact</a> | 
+				<a href="https://github.com/Hanjjay" target="blank" style="col1or: #66ab60;">Github</a> | 
+				<a href="https://www.facebook.com/profile.php?id=100016293699964" target="blank">Facebook</a></p>
 			</div>
 			<div class="col-sm-2">
-			<p class="pull-right"><a href="#">제일 위로</a></p>
+			<p class="pull-right"><a href="#">제일 위로</a>
+			</p>
 			</div>
 		</div>
 	</footer>
