--- a/django_web-master/blog/templates/page/home.html
+++ b/django_web-master/blog/templates/page/home.html
@@ -9,7 +9,7 @@
       <h2>인삿말</h2>
       <div class="col-sm-10">
         <div class="blog-basic-text">
-          <p>(인사내용)</p>
+          <p>(인사내용 )</p>
         </div>
       </div>
     </div>
@@ -20,7 +20,7 @@
       <div class="col-sm-10">
         <div class="blog-basic-text">
           <p>
-            10대 중심의 코로나 관련 데이터 사항들을 정리및 시각화 하여 10대중심의 내용을 볼수있도록
+            청소년 중심의 코로나 관련 데이터 사항들을 정리및 시각화 하여 청소년 중심의 코로나 관련 데이터들을 볼수있도록 하는것
           </p>
         </div>
       </div>
@@ -39,7 +39,7 @@
               <p>통계</p>
             </li>
             <li>
-              <p>Gwangyo</p>
+              <p>청소년</p>
             </li>
           </div>
         </ul>
@@ -53,16 +53,11 @@
         <div class="blog-structured-list">
           <ol>
             <li>Introduction (Home)</li>
-            <p>This part has overview about thesis. It also has abstract and experiment video.</p>
+            <p>영상,소개글.</p>
             <li>Patient analysis</li>
-            <p>This chapter describes the protocol of EEG experiment and methodology of signal analysis.
-                The flow chart of the protocol is included in this chapter for better understanding.</p>
+            <p>차트</p>
             <li>Corona map</li>
-            <p>This chapter describes the results of Power Spectral Density (PSD) values obtained from signal analysis and body composition results.
-                The results of PSD consist of graph of average PSD values for alpha band in EEG signal obtained from each subjects for each cycle.
-                Bar graph is also presented in this part to compare average PSD values in alpha band before and after squatting.
-                The results of body composition composed of body capacitance, resistance, reactance and phase angle.
-                The phase angles are compared before and after squatting and the difference between them is calculated.</p>
+            <p>지도</p>
           </ol>
         </div>
       </div>
@@ -70,34 +65,12 @@
 
     <!--Video half-->
     <div class="row">
-      <h2>현재 코로나의 확산세</h2>
       <div class="col-sm-5">
-        <div class="blog-basic-text">
-          <p>
-            코로나 확산의 현 상황
-          </p>
-        </div>
+        <div class="blog-basic-text"></div>
       </div>
       <div class="col-sm-5">
         <div class="blog-video">
-          <iframe class="youtube" src="https://youtu.be/TecUn83g4k8" frameborder="0" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-
-    <!--Video half-->
-    <div class="row">
-      <h2>Video</h2>
-      <div class="col-sm-5">
-        <div class="blog-basic-text">
-          <p>
-            
-          </p>
-        </div>
-      </div>
-      <div class="col-sm-5">
-        <div class="blog-video">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/6HpWEECz4IU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/nd6GgX29IE8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
