--- a/django_web-master/blog/templates/page/analysis.html
+++ b/django_web-master/blog/templates/page/analysis.html
@@ -10,7 +10,7 @@
       <h2>Introduction</h2>
       <div class="col-sm-10">
         <div class="blog-basic-text">
-          <p>이 챕터에서는 </p>
+          <p>이 챕터에서는 코로나에 관한 데이터를 가공하여 시각화한 자료들과 해설들을 달아둠</p>
         </div>
       </div>
     </div>
@@ -22,13 +22,16 @@
         <div class="blog-code">
           {% load staticfiles %}
           <div style='position:relative;padding-bottom:calc(100% / 1.70)'><iframe src="{% static 'img/analysis/01_num_of_patients.png' %}" frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
+          <p>
+            현 우리나라의 확진자들중 사망자,치료중,완치자 로 상태를 나누어 각각의 퍼센트 비율을 원그래프로 나타냄
+          </p>
         </div>
       </div>
     </div>
 
     <!--image split-->
     <div class="row">
-      <h2>Flow Chart</h2>
+      <h2>Age group</h2>
       <div class="col-sm-10">
         <div class="blog-code">
           {% load staticfiles %}
@@ -60,7 +63,7 @@
       <div class="col-sm-10">
         <div class="blog-code">
           {% load staticfiles %}
-          <div style='position:relative;padding-bottom:calc(100% / 1.70)'><iframe src="{% static 'img/analysis/04_testing.png' %}" frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
+          <div style='position:relative;padding-bottom:calc(100% / 1.70)'><iframe src="{% static 'img/analysis/04_10s_case_BSS.png' %}" frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
             <p>
               해설2
             </p>
@@ -75,7 +78,7 @@
       <div class="col-sm-10">
         <div class="blog-code">
           {% load staticfiles %}
-          <div style='position:relative;padding-bottom:calc(100% / 1.70)'><iframe src="{% static 'img/analysis/05_testing.png' %}" frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
+          <div style='position:relative;padding-bottom:calc(100% / 1.70)'><iframe src="{% static 'img/analysis/05_10s_case_ASS.png' %}" frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
             <p>
               해설3
             </p>
