--- a/django_web-master/blog/templates/page/analysis.html
+++ b/django_web-master/blog/templates/page/analysis.html
@@ -10,7 +10,7 @@
       <h2>Introduction</h2>
       <div class="col-sm-10">
         <div class="blog-basic-text">
-          <p>이 챕터에서는 코로나에 관한 데이터를 가공하여 시각화한 자료들과 해설들을 달아둠</p>
+          <p>이 챕터에서는 코로나에 관한 데이터를 가공하여 시각화한 자료들과 해설들을 달아둠 </p>
         </div>
       </div>
     </div>
@@ -23,7 +23,7 @@
           {% load staticfiles %}
           <div style='position:relative;padding-bottom:calc(100% / 1.70)'><iframe src="{% static 'img/analysis/01_num_of_patients.png' %}" frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
           <p>
-            현 우리나라의 확진자들중 사망자,치료중,완치자 로 상태를 나누어 각각의 퍼센트 비율을 원그래프로 나타냄
+            현 우리나라의 확진자들중 사망자,치료중,완치자 로 상태를 나누어 각각의 퍼센트 비율을 원그래프로 나타냄 
           </p>
         </div>
       </div>
@@ -37,7 +37,7 @@
           {% load staticfiles %}
           <div style='position:relative;padding-bottom:calc(100% / 1.70)'><iframe src="{% static 'img/analysis/02_age_group.png' %}" frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
             <p>
-              위 표는 코로나 확진자수를 연령대별로 구분하여 차트로 나타낸 것으로 
+              위 표는 우리나라의 코로나 확진자수를 연령대별로 구분하여 차트로 나타낸 것으로 청소년 감염자수는 약7.5% 정도로 낮은 비율로 분포한것을 알수있음
             </p>
         </div>
       </div>
@@ -45,13 +45,13 @@
 
     <!--image split-->
     <div class="row">
-      <h2>Flow Chart</h2>
+      <h2>개학전 개학후 감염자 비율 비교</h2>
       <div class="col-sm-10">
         <div class="blog-code">
           {% load staticfiles %}
           <div style='position:relative;padding-bottom:calc(100% / 1.70)'><iframe src="{% static 'img/analysis/03_starting_school_10s_ratio.png' %}" frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
             <p>
-              해설1
+              개학 날짜를 기준으로 청소년 감염자수 비율을 비교한 그래프이다
             </p>
         </div>
       </div>
@@ -59,13 +59,12 @@
 
     <!--image split-->
     <div class="row">
-      <h2>Flow Chart</h2>
+      <h2>개학전의 청소년 감염원인</h2>
       <div class="col-sm-10">
         <div class="blog-code">
           {% load staticfiles %}
           <div style='position:relative;padding-bottom:calc(100% / 1.70)'><iframe src="{% static 'img/analysis/04_10s_case_BSS.png' %}" frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
             <p>
-              해설2
             </p>
         </div>
       </div>
@@ -74,13 +73,12 @@
 
     <!--image split-->
     <div class="row">
-      <h2>Flow Chart</h2>
+      <h2>개학후의 청소년 감염원이</h2>
       <div class="col-sm-10">
         <div class="blog-code">
           {% load staticfiles %}
           <div style='position:relative;padding-bottom:calc(100% / 1.70)'><iframe src="{% static 'img/analysis/05_10s_case_ASS.png' %}" frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
             <p>
-              해설3
             </p>
         </div>
       </div>
