--- a/django_web-master/blog/templates/page/home.html
+++ b/django_web-master/blog/templates/page/home.html
@@ -9,7 +9,9 @@
       <h2>인삿말</h2>
       <div class="col-sm-10">
         <div class="blog-basic-text">
-          <p>(인사내용 )</p>
+          <p>
+            우리는 광교 고등학교에 코뿔소횡경막 팀으로 우리의 탐구 활동이 코로나에대한 경각심을 알릴수있는 자료가 되었음하며 이 데이터에대한 출처는 질병관리본부에 있음을 알립니다.
+          </p>
         </div>
       </div>
     </div>
@@ -20,7 +22,8 @@
       <div class="col-sm-10">
         <div class="blog-basic-text">
           <p>
-            청소년 중심의 코로나 관련 데이터 사항들을 정리및 시각화 하여 청소년 중심의 코로나 관련 데이터들을 볼수있도록 하는것
+            <!--청소년 중심의 코로나 관련 데이터 사항들을 정리및 시각화 하여 청소년 중심의 코로나 관련 데이터들을 볼수있도록 하는것-->
+            하이염
           </p>
         </div>
       </div>
