--- a/django_web-master/blog/templates/page/home.html
+++ b/django_web-master/blog/templates/page/home.html
@@ -22,8 +22,7 @@
       <div class="col-sm-10">
         <div class="blog-basic-text">
           <p>
-            <!--청소년 중심의 코로나 관련 데이터 사항들을 정리및 시각화 하여 청소년 중심의 코로나 관련 데이터들을 볼수있도록 하는것-->
-            하이염
+            청소년 중심의 코로나 관련 데이터 사항들을 정리및 시각화 하여 청소년 중심의 코로나 관련 데이터들을 볼수있도록 하는것
           </p>
         </div>
       </div>
