--- a/django_web-master/blog/templates/page/home.html
+++ b/django_web-master/blog/templates/page/home.html
@@ -10,7 +10,7 @@
       <div class="col-sm-10">
         <div class="blog-basic-text">
           <p>
-            우리는 광교 고등학교에 코뿔소횡경막 팀으로 우리의 탐구 활동이 코로나에대한 경각심을 알릴수있는 자료가 되었음하며 이 데이터에대한 출처는 질병관리본부에 있음을 알립니다.
+            <!--우리는 광교 고등학교에 코뿔소횡경막 팀으로 우리의 탐구 활동이 코로나에대한 경각심을 알릴수있는 자료가 되었음하며 이 데이터에대한 출처는 질병관리본부에 있음을 알립니다.-->
           </p>
         </div>
       </div>
